fix: se agrego elementos vacios entre las lineas 56 y 64

--- a/introduccion_VSC/HTML/index.html
+++ b/introduccion_VSC/HTML/index.html
@@ -52,25 +52,17 @@
 
     <h6> Datos random </h6>
     <dl> <!-- dl de description list / lista descriptiva -->
-        <dt>  </dt> <!-- Término a definir -->
-        <dd> Luke tine un disfras de Panda que lo hace lucir un tierno y revelde.  </dd> <!-- Descripción -->
         <dt> Fruta favorita </dt> <!-- Término a definir -->
-        <dd> A Luke le gusta el Mango, el no puede comer uvas ya que son toxicas para el, los perritos tampoco pueden comer aguacate, ni limon.</dd> <!-- Descripción -->
+            <dd> A Luke le gusta el Mango.<br>
+             Como adicional el no puede comer uvas ya que son toxicas para el,<br>
+             los perritos tampoco pueden comer aguacate, ni limon.</dd> <!-- Descripción -->
         <dt> Disfrases que tiene Luke </dt> <!-- Término a definir -->
-        <dd> Luke tine un disfras de Panda que lo hace lucir un tierno y revelde.
-             Dos trajecitos de pirata luce tan revelde.
-             Un disfras de borrego.
-             Un disfras de playa
-             Sueter Navideño </dd> <!-- Descripción -->
-        <dt> Fruta favorita </dt> <!-- Término a definir -->
-        <dd> A Luke le gusta el Mango </dd> <!-- Descripción -->
-    </dl>  
- 
-        <dt> Disfrases que tiene Luke </dt> <!-- Término a definir -->
-        <dd> Luke tine un disfras de Panda que lo hace lucir un tierno y revelde.  </dd> <!-- Descripción -->
-        <dt> Fruta favorita </dt> <!-- Término a definir -->
-        <dd> A Luke le gusta el Mango </dd> <!-- Descripción -->
-    
+            <dd> Luke tine un disfras de Panda que lo hace lucir un tierno y revelde.<br>
+             Dos trajecitos de pirata luce tan revelde.<br>
+             Un disfras de borrego.<br>
+             Un disfras de playa<br>
+             Sueter Navideño </dd> <!-- Descripción --> 
+    </dl>
 </body>
 
 </html> 
