style:se agregaron estilo CSS a html

--- a/introduccion_VSC/HTML/index.html
+++ b/introduccion_VSC/HTML/index.html
@@ -5,13 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"><!--Se ultiliza para el responsive, pero no significa que solo agregandolo nuestra web app,sera responsiva-->
     <title>Mi fan page de Luke</title><!--titulo de la pestaña web-->
     <link rel="stylesheet" href="style.css">
+    <style>
+        span{
+            background-color:beige
+        }
+        
+    </style>
+
 </head>
 <body> <!--Contenido visible en el sitio-->
     <!--Headers- Encabezado h1-h6-->
     <div>
-        <h1>Fan page de Luke</h1>
+        <h1 style="color:black;text-align:center;"> Fan page de Luke</h1>
         <img src="Perrito pan de muerto.jpg" alt="Fotografia de Perrito disfrasado de pan de muerto">
-        <p>Lorem</p><!--no imbocamos nada, significa apartado ya que no se que poner jejeje, este es un parafo o contenido-->
+        <p id="parrafo-principal">Lorem</p><!--no imbocamos nada, significa apartado ya que no se que poner jejeje, este es un parafo o contenido-->
         <p>Lorem 2</p><p>Lorem 3 y quedara con salto de linea muajajaja</p>
         <span>Holi crayoli xD</span>
         <span>Lukardito esta dormido, durante mi clase en el bootcamp</span><!--es un elemento lineal -->
@@ -63,6 +70,11 @@
              Un disfras de playa<br>
              Sueter Navideño </dd> <!-- Descripción --> 
     </dl>
+
+    <span class="verso-poema"> El pan de muerto </span> <br> <!-- br es un elemento vacío, que nos da un salto de línea -->
+    <span class="verso-poema"> Es tan rico y saludable </span> <br>
+    <span class="verso-poema"> como la fresca mañana de otoño </span>
+    
 </body>
 
 </html> 
