feat: se agrego link de URL a los nombres de los videos de musica

--- a/introduccion_VSC/webTarea2/hablandoDeMi.html
+++ b/introduccion_VSC/webTarea2/hablandoDeMi.html
@@ -2,11 +2,10 @@
 <html lang ="es">
 <html>
     <head>
-        meta 
-        <title> Vanessa Contreras </title>
-        <meta charset="UTF-8"> 
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-        <link rel="stylesheet" href="style.css">
+         <meta charset="UTF-8"> 
+         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+         <title> Vanessa Contreras </title>
+         <link rel="stylesheet" href="style.css">
         <stile.css></stile.css>
     </head>
 
@@ -42,16 +41,16 @@
     <h3> Top Mis 5 canciones Favoritas. </h2>
     <span>Varian segun la temporada.</span>
         <ol>
-            <li>Siempre de Mago de Oz <br><iframe width="640" height="480" src="https://www.youtube.com/embed/7chP5mJx0L0" title="Mägo De Oz - Siempre" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></li>
+            <li><a href="https://www.youtube.com/watch?v=7chP5mJx0L0">Siempre de Mago de Oz</a><br><iframe width="640" height="480" src="https://www.youtube.com/embed/7chP5mJx0L0" title="Mägo De Oz - Siempre" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></li>
 
-            <li>Mi Vida de DLD <br><iframe width="640" height="480" src="https://www.youtube.com/embed/dapgfO59ar8" title="DLD - Mi Vida" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <li><a href="https://www.youtube.com/watch?v=dapgfO59ar8">Mi Vida de DLD</a><br><iframe width="640" height="480" src="https://www.youtube.com/embed/dapgfO59ar8" title="DLD - Mi Vida" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </li>
 
-            <li>Clavado en un Bar de Mana <br><iframe width="640" height="480" src="https://www.youtube.com/embed/aXG5mN_Tbl8" title="Maná - Clavado En Un Bar (Letra)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> </li>
+            <li><a href="https://www.youtube.com/watch?v=fBrX8ym3dBM">Clavado en un Bar de Mana</a> <br><iframe width="640" height="480" src="https://www.youtube.com/embed/fBrX8ym3dBM" title="Maná - Clavado En Un Bar (Video Oficial)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> </li>
 
-            <li>Lovery Billie Eilish fk:Khalid <br> <iframe width="640" height="480" src="https://www.youtube.com/embed/8VLXHyHRXjc" title="Billie Eilish - lovely (Lyrics) ft. Khalid" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></li>
+            <li><a href="https://www.youtube.com/watch?v=8VLXHyHRXjc">Lovery Billie Eilish fk:Khalid </a><br> <iframe width="640" height="480" src="https://www.youtube.com/embed/8VLXHyHRXjc" title="Billie Eilish - lovely (Lyrics) ft. Khalid" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></li>
 
-            <li>Revirite the stars de  The Greatest Showman<br><iframe width="640" height="480" src="https://www.youtube.com/embed/Scq65uGROKk" title="The Greatest Showman Lyric Video - Rewrite the Stars (2018) | FandangoNOW Extras" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe><br> <!-- <span>Si no puedes ver el video has click aqui</span> --> </li>
+            <li><a href="https://www.youtube.com/watch?v=Scq65uGROKk"> The stars de  The Greatest Showman</a><br><iframe width="640" height="480" src="https://www.youtube.com/embed/Scq65uGROKk" title="The Greatest Showman Lyric Video - Rewrite the Stars (2018) | FandangoNOW Extras" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe><br> <!-- <span>Si no puedes ver el video has click aqui</span> --> </li>
         </ol>
 </div>
 
