feat: clase tema de estilos y enlaces

--- a/introduccion_VSC/HTML/index.html
+++ b/introduccion_VSC/HTML/index.html
@@ -6,18 +6,21 @@
     <title>Mi fan page de Luke</title><!--titulo de la pestaña web-->
     <link rel="stylesheet" href="style.css">
     <style>
+    
         span{
             background-color:beige
         }
         
     </style>
-
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Sofadi+One&display=swap" rel="stylesheet">
 </head>
 <body> <!--Contenido visible en el sitio-->
     <!--Headers- Encabezado h1-h6-->
-    <div>
-        <h1 style="color:black;text-align:center;"> Fan page de Luke</h1>
-        <img src="Perrito pan de muerto.jpg" alt="Fotografia de Perrito disfrasado de pan de muerto">
+    <div id="seccion-principal">
+        <h1>Fan page de Luke</h1><!--<h1 style="color:black;text-align:center;"> Fan page de Luke</h1> asi son los elementos en linea-->
+        <img src="Perrito pan de muerto.jpg" width="300" height="300" alt="Fotografia de Perrito disfrasado de pan de muerto">
         <p id="parrafo-principal">Lorem</p><!--no imbocamos nada, significa apartado ya que no se que poner jejeje, este es un parafo o contenido-->
         <p>Lorem 2</p><p>Lorem 3 y quedara con salto de linea muajajaja</p>
         <span>Holi crayoli xD</span>
@@ -41,11 +44,11 @@
         <li>Acontinuacion unas imagenes de Luke en su explendor</li>
             <ol><!--lista ordenada-->
                 <li>Cuando te levanta y tiene cara de yo no fui</li>
-                <img src="Luke despertando al humano.jpg" alt="El perrito mas bonito levantandote en la mañana">
+                <img src="Luke despertando al humano.jpg"width="200" height="200" alt="El perrito mas bonito levantandote en la mañana">
                 <li>Cuando te jusga</li>
-                <img src="Luke Jusgando.jpg" alt="El perrito jusgador ">
+                <img src="Luke Jusgando.jpg" width="200" height="200"alt="El perrito jusgador ">
                 <li>Consu trajecito con corbata</li>
-                <img src="Perrito Jugando.jpg" alt="El perrito explorando y jugando ">
+                <img src="Perrito Jugando.jpg" width="200" height="200"xalt="El perrito explorando y jugando ">
             </ol>
         <li>El luce siempre muy bien, aunque el camareográfo sea malo</li>
     </lo>
