modified: se modifico

--- a/introduccion_VSC/webTarea6/sobreMi.html
+++ b/introduccion_VSC/webTarea6/sobreMi.html
@@ -161,6 +161,14 @@
                                     <td>      </td>
                                     <td>   X  </td>
                                 </tr>
+                                <tr class="table" id="table">
+                                    <th id="numeroDeHobbie" scope="row">5</th>
+                                    <td>Fastidiar a mis mascotas con amor</td>
+                                    <td>      </td>
+                                    <td>      </td>
+                                    <td>   X  </td>
+                                </tr>
+                                
                             </tbody>
                       
                     </table> 
