modified: corrección de texto

--- a/introduccion_VSC/webTarea6/sobreMi.html
+++ b/introduccion_VSC/webTarea6/sobreMi.html
@@ -102,8 +102,8 @@
                 Cuento en experiencia en Creación Literaria y Comprención lectora. 
                 Mis creaciones favoritas son poemas.<br>
                 Yo y mi hermano fuimos los primemeros nietos por ambas partes de la familia y los abuelos nos consentian, aun asi nunca fuimos malcriados y al contrario somos muy serios y bien portados.<br>
-                De comida me gusta mucho el espagueti con carne molida y pero mi favorito es la milanesa.
-                Aunque admito que la milanesa no se compara con un buen Ramen, creo que lo comeria todo el tiempo, Así que en ocaciones realizo ramen casero.<br>
+                La comida que me gusta mucho es el espagueti con carne molida, pero mi favorito es la milanesa.
+                Aunque admito que la milanesa no se compara con un buen Ramen, creo que lo comeria todo el tiempo, así que como me encanta el Ramen en ocaciones realizo ramen casero.<br>
                 Soy muy buena en los deportes, pero nunca he practicado un deporte de manera rigurosa. <br>
                 Y como dato adicional llege a participar en un torneo de ajedres en la primaria contra varios colegios, no ganamos el primer lugar pero fue una gran experiencia.</p>
             </div><!--columna 2-->
